--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="settings_pin_code_verification_confirmation_title">Ask authentication for operation signing</string>
     <string name="settings_pin_code_verification_confirmation_message">Each sign operation on wallets with key pair (created in nova wallet or imported) should require PIN verification before constructing signature</string>
 
+    <string name="profile_settings_biometric_auth_title">Biometric auth</string>
     <string name="profile_settings_pin_code_verification_title">Approve with PIN</string>
 
     <string name="ethereum_function">Function</string>
