--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="common_expired">Expired</string>
+
+    <plurals name="common_networks_plural">
+        <item quantity="one">Network</item>
+        <item quantity="other">Networks</item>
+    </plurals>
+
     <string name="common_required">Required</string>
     <string name="common_optional">Optional</string>
 
     <plurals name="wallet_connect_unsupported_networks_hidden">
         <item quantity="one">%s unsupported network is hidden</item>
         <item quantity="other">%s unsupported networks are hidden</item>
-    </plurals>
-
-    <plurals name="common_networks_plural">
-        <item quantity="one">Network</item>
-        <item quantity="other">Networks</item>
     </plurals>
 
     <string name="wallet_connect_session_approve_unsupported_chains_alert">Some of the required networks requested by \"%s\" are not supported in Nova Wallet</string>
