Wallet connet/fixes (#912)
* Scrollable session approve screen

* Show loading state when disconnecting wc session

* Go back to settings when disconnecting latest session

* Plurals for networks label

* Reject polkadot_signTransaction if root chainId mismatch chainId in payload

* Show expired status

* Show expired status

* Code style

* Localization

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="common_expired">Expired</string>
+
+    <plurals name="common_networks_plural">
+        <item quantity="one">Network</item>
+        <item quantity="other">Networks</item>
+    </plurals>
+
     <string name="common_required">Required</string>
     <string name="common_optional">Optional</string>
 
