--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     </plurals>
 
     <plurals name="common_unknown_chains">
-        <item quantity="one">s unsupported</item>
+        <item quantity="one">%s unsupported</item>
         <item quantity="other">%s unsupported</item>
     </plurals>
 
