--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="common_waiting">Waiting</string>
+    <string name="common_per_year">/ year</string>
+    <string name="staking_earnings_per_year">Earnings per year</string>
+
     <string name="common_expired">Expired</string>
 
     <plurals name="common_networks_plural">
