--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -1096,6 +1096,8 @@
     <string name="wallet_send_on_chain">Внутри сети</string>
     <string name="wallet_send_phishing_warning_text">Следующий адрес: %s как известно, используется для фишинга, поэтому мы не рекомендуем отправлять токены на этот адрес. Вы все равно хотите продолжить?</string>
     <string name="wallet_send_phishing_warning_title">Предупреждение о мошенничестве</string>
+    <string name="wallet_send_recipient_blocked_message">Получатель был заблокирован владельцем токена и в настоящее время не может принимать входящие переводы</string>
+    <string name="wallet_send_recipient_blocked_title">Получатель не может принять перевод</string>
     <string name="wallet_send_recipient_network">Сеть получателя</string>
     <string name="wallet_send_to_network">В сеть</string>
     <string name="wallet_send_tokens_from">Отправить %s из</string>
