--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="staking_dashboard_more_options">More staking options</string>
+    <string name="staking_dashboard_no_stake_header">Stake and earn rewards</string>
+    <string name="staking_dashboard_browser_stake_header">Staking via Nova DApp browser</string>
+
     <string name="common_waiting">Waiting</string>
     <string name="common_per_year">/ year</string>
+    <string name="common_per_year_long">per year</string>
     <string name="staking_earnings_per_year">Earnings per year</string>
 
     <string name="common_expired">Expired</string>
