--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
+    <string name="referenda_list_filter_placeholder">There are no referenda with filters applied</string>
+
     <!--<string name="pincode_fingerprint_switch_dialog_title">Use biometric to authorize</string>-->
     <string name="pincode_biometric_switch_dialog_title">Use biometric to authorize</string>
 
@@ -9,7 +11,7 @@
 
     <string name="common_settings">Settings</string>
     <string name="settings_biometric_not_ready_title">Biometrics disabled in Settings</string>
-    <string name="settings_biometric_not_ready_message">Please, make sure Nova has access to biometrics in Settings</string>
+    <string name="settings_biometric_not_ready_message">Please, make sure biometrics is enabled in Settings</string>
 
     <string name="referenda_filters_header">Show</string>
     <string name="referenda_filters_all">All referenda</string>
